# AEGIS

./: .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  daily-security.yml  pr-security.yml  security-agent.yml
aegis/: __init__.py
aegis/adapters/: __init__.py  base.py  django_adapter.py  generic.py
aegis/config/: __init__.py  defaults.py
aegis/core/: __init__.py  config.py  context.py  crypto.py  egress.py  engine.py  exceptions.py  policy.py  redaction.py  stores.py
aegis/core/modules/: __init__.py  anomaly.py  audit.py  authn.py  authz.py  base.py  deception.py  encryption.py  errors.py  headers.py  ratelimit.py  secrets.py  session.py  validation.py
examples/demo_app/: server.py
examples/redteam-demo/: README.md  redteam.py  run_demo.py  secure_app.py  vulnerable_app.py
security/: loop.config.yml
security/agent/: PROMPT.md  false_positives.json  run_agent.py
security/dast/: probe.py
security/ratchet/: baseline_tests.txt  corpus.lock.json  ratchet_guard.py  update_corpus.py
supplychain/: sbom.py
tests/: conftest.py  helpers.py  test_adversarial.py  test_agent_triage.py  test_audit.py  test_authn_lockout.py  test_authz.py  test_boot_failclosed.py  test_crypto.py  test_deception.py  test_django_integration.py  test_egress.py  test_pipeline.py
tests/fuzz/: test_fuzz_inputs.py
tests/regression/: __init__.py  test_REG_20260625_0001_jwt_alg_none.py  test_REG_20260626_0002_malformed_ciphertext.py  test_REG_20260626_AGENT01_pyjwt.py  test_REG_20260626_AGENT02_pyjwt.py  test_REG_20260626_AGENT03_pyjwt.py  test_REG_20260626_AGENT04_pyjwt.py  test_REG_20260626_AGENT05_pyjwt.py  test_REG_20260626_AGENT06_pyjwt.py  test_REG_20260626_AGENT07_pyjwt.py  test_REG_20260626_AGENT08_cryptography.py  test_REG_20260626_AGENT09_cryptography.py  test_REG_20260626_AGENT10_cryptography.py  test_REG_20260626_AGENT11_cryptography.py
